--- a/index.html
+++ b/index.html
@@ -8,12 +8,10 @@
     <meta name="author" content="EV3" />
     <link rel="stylesheet" href="./style.css" />
 
-    <script src="./p5.min.js"></script>
-    <!-- Import the p5 library. NFA does not support importing the script from external urls-->
-    <script src="./nfa.js"></script>
-    <!-- Import the NFA mersenne-twister based PRNG generator, used for pseudo random params-->
+    <!-- <script src="./p5.min.js"></script> -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.6.0/p5.js"></script>
+    <script src="./seedGen.js"></script>
     <script src="./sketch.js"></script>
-    <!-- Import the p5 canvas generation code-->
   </head>
   <body >
     <div id="loadingScreen">
